syntax = "proto3";

package utils_auth;

service UtilsAuth {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
  rpc Signup(SignupRequest) returns (AuthorizeResponse);
}

message Error {
  uint32 code = 1;
  string description = 2;
  optional string cause = 3;
}

enum RequestStatus {
  UNKNOWN = 0;
  SUCCESS = 1;
  ERROR = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  RequestStatus status = 1;
  optional Error error = 2;
  optional string authorization_token = 3;
  string message = 4;
}

message AuthorizeRequest { optional string authorization_token = 1; }

message AuthorizeResponse {
  RequestStatus status = 1;
  optional Error error = 2;
  bool is_authorized = 3;
}

message SignupRequest {
  string email = 1;
  string password = 2;
}

message SignupResponse {
  RequestStatus status = 1;
  optional Error error = 2;
  string message = 3;
}